# EpiTelos

./: .gitignore  1-npm install.bat  2-npm run dev.bat  3-npm run build.bat  App.tsx  CHANGELOG.md  README.md  constants.ts  index.css  index.html  metadata.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  types.ts  vite-env.d.ts  vite.config.ts
components/: ArchiveManager.tsx  ContextManager.tsx  ContextTreeView.tsx  FunctionManager.tsx  FunctionRunner.tsx  MermaidDiagram.tsx  Modal.tsx  Settings.tsx  Sidebar.tsx  ThinkingBlock.tsx
components/icons/: BrainIcon.tsx  CheckIcon.tsx  ChevronDownIcon.tsx  ChevronRightIcon.tsx  ClockIcon.tsx  CogIcon.tsx  CopyIcon.tsx  DocumentIcon.tsx  ExternalLinkIcon.tsx  EyeIcon.tsx  EyeOffIcon.tsx  FolderIcon.tsx  MLIcon.tsx  PencilIcon.tsx  PlayIcon.tsx  RefreshIcon.tsx  RotateCcwIcon.tsx  SaveIcon.tsx  SearchIcon.tsx  StopIcon.tsx  TrashIcon.tsx
components/runner/: ControlHub.tsx  ResponseTerminal.tsx
components/settings/: ModelSourceConfig.tsx
contexts_sample/: Da Vinci - Milano - Automata Cavaliere (1495).md  journal.md  yearreview.md
functions/a_day_in_the_life_of/: metadata.json  system.md
functions/analyze_cv/: metadata.json  (+1 more)
hooks/: useAIProvider.ts  useAppProfile.ts  useArchives.ts  useContextManager.ts  useFunctions.ts
public/: built-in-functions.json
scripts/: generate-functions.js
services/: customProviderService.ts  desktopFileService.ts  fileService.ts  geminiService.ts  maritacaService.ts  notificationService.ts  ollamaService.ts  openaiService.ts  platform.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  secure_store.rs
(+75 files in other folders)
