
[package]
name = "epitelos"
version = "1.6.1"

description = "EpiTelos - Personal Development AI"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "notification-all", "http-all", "dialog-all", "fs-all", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keyring = "2.3.2"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }



[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
